...
                }

                when (state.carStatus) {
                    CarStatus.NO_PARKED_CAR -> {
                        HomeButton(
                            onClick = { viewModel.onEvent(HomeEvent.SaveCar) },
                            text = "Park Here",
                            imageVector = null,
                            modifier = Modifier
                                .fillMaxWidth()
                                .align(Alignment.BottomCenter)
                                .padding(bottom = 64.dp)
                                .padding(horizontal = 16.dp)
                        )
                    }

                    CarStatus.PARKED_CAR -> {
                        HomeButton(
                            onClick = { viewModel.onEvent(HomeEvent.StartSearch) },
                            text = "Get Directions",
                            imageVector = Icons.Default.Directions,
                            modifier = Modifier
                                .fillMaxWidth()
                                .align(Alignment.BottomCenter)
                                .padding(bottom = 64.dp)
                                .padding(horizontal = 16.dp)
...
