...
                    Text(text = "$it away", fontSize = 18.sp, color = Color.White)
                }
            }
        }
        HomeButton(
            onClick = onClick,
            text = "Stop Searching",
            imageVector = null
        )
    }
}

@Preview
...
